--- a/src/layout.less
+++ b/src/layout.less
@@ -2,6 +2,23 @@
   display: flex;
   align-items: center;
   box-sizing: content-box;
+  position: relative;
+
+  &__top-background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 50%;
+  }
+
+  &__bottom-background{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 50%;
+  }
 
   // selected line
   .rc-slider-track {
