--- a/src/layout.less
+++ b/src/layout.less
@@ -4,20 +4,20 @@
   box-sizing: content-box;
   position: relative;
 
-  &__top-background{
+  &__top-background {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    height: 50%;
+    height: ~"calc(50% - 2px)";
   }
 
-  &__bottom-background{
+  &__bottom-background {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    height: 50%;
+    height: ~"calc(50% - 2px)";
   }
 
   // selected line
@@ -34,7 +34,6 @@
       left: 100%;
     }
   }
-
 
   &--size- {
     &PX12 {
