style: DynaInput0024Slider, opacity for the daylight

--- a/src/components/Daylight.less
+++ b/src/components/Daylight.less
@@ -1,5 +1,6 @@
-.dyna-slider-daylight{
-  height: 70%;
+.dyna-slider-daylight {
+  height: 100%;
   background: linear-gradient(0.25turn, darkblue, darkblue, orange, yellow, yellow, orange, blue, darkblue);
   border-radius: 0 0 16px 16px;
+  opacity: 0.4;
 }
