--- a/src/DynaInputDurationSlider.less
+++ b/src/DynaInputDurationSlider.less
@@ -14,4 +14,20 @@
       margin-left: 8px;
     }
   }
+
+  &__min-max-container {
+    display: flex;
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: gray;
+
+    &__min {
+      flex: 1 1;
+      text-align: left;
+    }
+    &__max {
+      flex: 1 1;
+      text-align: right;
+    }
+  }
 }
