--- a/src/components/Daylight.less
+++ b/src/components/Daylight.less
@@ -1,6 +1,18 @@
 .dyna-slider-daylight {
   height: 100%;
   background: linear-gradient(0.25turn, darkblue, darkblue, orange, yellow, yellow, orange, blue, darkblue);
-  border-radius: 0 0 16px 16px;
-  opacity: 0.4;
+  opacity: 0.5;
+  display: flex;
+  font-size: 0.7rem;
+  font-weight: bold;
+  color: white;
+
+  &__min {
+    flex: 1 1;
+    text-align: left;
+  }
+  &__max {
+    flex: 1 1;
+    text-align: right;
+  }
 }
