--- a/src/layout.less
+++ b/src/layout.less
@@ -17,7 +17,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: ~"calc(50% - 2px)";
+    top: ~"calc(50% + 4px)";
   }
 
   // selected line
