--- a/src/DynaInput0024Slider.less
+++ b/src/DynaInput0024Slider.less
@@ -15,4 +15,36 @@
       margin-left: 8px;
     }
   }
+
+  // size
+  &--size- {
+    &PX12 {
+      .dyna-slider-daylight__min,
+      .dyna-slider-daylight__max {
+        display: none;
+      }
+    }
+    &PX24 {
+      .dyna-slider-daylight__min,
+      .dyna-slider-daylight__max {
+        display: none;
+      }
+    }
+    &PX32 {
+      .dyna-slider-daylight {
+        position: relative;
+        top: -1px;
+        left: 0;
+        font-size: 10px;
+        padding: 0 1px;
+      }
+    }
+    &PX48 {
+      .dyna-slider-daylight__min,
+      .dyna-slider-daylight__max {
+        font-size: 14px;
+        padding: 0 2px;
+      }
+    }
+  }
 }
