--- a/src/DynaInputPriceSlider.less
+++ b/src/DynaInputPriceSlider.less
@@ -30,4 +30,20 @@
       text-align: right;
     }
   }
+
+  // size
+  &--size-PX12 &__min-max-container {
+    display: none;
+  }
+  &--size-PX24 &__min-max-container {
+    display: none;
+  }
+  &--size-PX32 &__min-max-container {
+    position: relative;
+    top: -1px;
+    font-size: 12px;
+  }
+  &--size-PX48 &__min-max-container {
+    font-size: 16px;
+  }
 }
