--- a/src/components/StatsBar.less
+++ b/src/components/StatsBar.less
@@ -2,11 +2,11 @@
   display: flex;
   height: 100%;
   align-items: flex-end;
-  transition: height 200ms ease-in-out;
 
   &__item {
     flex: 1 1;
     background-color: gray;
     margin: 0 0.5px;
+    transition: min-height 200ms ease-in-out;
   }
 }
